<resources>
    <string name="app_name">Caloric</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caloric">Caloric</string>
    <string name="enter_email">Enter your E-mail</string>
    <string name="enter_password">Enter your Password\n</string>
    <string name="login">Log In</string>
    <string name="dHaccount">You don\'t have an account</string>
    <string name="register">REGISTER</string>
    <string name="or">Or Use</string>
    <string name="signin">Sign In</string>
    <string name="guest">As a guest</string>
    <string name="confirmpass">Confirm your Password</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="favorits">Favourits</string>
    <string name="planners">Planners</string>
    <string name="empty">"  "</string>
    <string name="Username">User Name</string>
    <string name="recommendations">Our Recommendations</string>
    <string name="meals">Our Meals For Today</string>
    <string name="must_login">you must log in</string>
    <string name="access">you must log in</string>
    <string name="search_by_all_meals">Search By:</string>
    <string name="bymeals">Meals</string>
    <string name="category">Category</string>
    <string name="ingrediants">Ingredients</string>
    <string name="area">Countries</string>
    <string name="searching">Search</string>
    <string name="add_to_weekplan">Add To</string>
    <string name="filteringrd">Filtered by ingredient</string>
    <string name="categories">Categories</string>
    <string name="my_saved_recipes">My Favourite Recipes</string>
    <string name="foodplanner">My Week Plan</string>
    <string name="steps">Steps</string>
    <string name="nameofMeal">Name Of Meal</string>
    <string name="no_result">No Result</string>
    <string name="day">Day</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="google">Google</string>
    <string name="defaultId">YOUR_DEFAULT_WEB_CLIENT_ID.apps.googleusercontent.com</string>
    <string name="clientId">130596279737-b7ic2eimdq77ajcbev5bk7crmqs88qu9.apps.googleusercontent.com</string>
    <string name="messageAdd">You need to log in</string>
    <string name="signIn">SignIn</string>
    <string name="cancel">Cancel</string>
    <string name="recipe">Recipe</string>
    <string name="addtofav">Add to Favourite</string>
    <string name="inst">Instructions</string>
    <string name="messageFav">You need to Sign in to Show Your Favorite Meals</string>
    <string name="addToFav">Add To Favourite</string>
    <string name="name">Mai Ibrahim</string>
    <string name="email">mai@gmail.com</string>
    <string name="logout">LogOut</string>
    <string name="messagePlan">You need to Sign in to Show Your Plan</string>
    <string name="dailyrecom">Daily Recommendations</string>
    <string name="plan">My Plan</string>
    <string name="mobilecalender">Add to Mobile Calender</string>


    <string-array name="flags">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://cdn.britannica.com/73/3473-004-6E573BFA/Flag-Philippines.jpg</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.freepnglogos.com/uploads/globe-png/globe-icon-aquanox-icons-softiconsm-34.png</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
    </string-array>
</resources>