<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".search.view.SearchFrag">


    <EditText
        android:id="@+id/etSearch"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_background"
        android:elevation="20dp"
        android:hint="@string/searching"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="14dp"
        android:checkedButton="@+id/country_radioBtn"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etSearch">

        <RadioButton
            android:id="@+id/meal_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/joti_one"
            android:text="@string/bymeals" />

        <RadioButton
            android:id="@+id/country_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/joti_one"
            android:text="@string/area" />

        <RadioButton
            android:id="@+id/ingredient_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/joti_one"
            android:text="@string/ingrediants" />

        <RadioButton
            android:id="@+id/category_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/joti_one"
            android:text="@string/category" />
    </RadioGroup>



    <TextView
        android:id="@+id/nullTextViewInsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:textSize="40sp"
        android:text="@string/no_result"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"


        tools:listitem="@layout/meal_item"
        />

</androidx.constraintlayout.widget.ConstraintLayout>






